policies/database_webapp-connect-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-webapp-to-database
  namespace: database
spec:
  podSelector: {} # Selects all pods in example-namespace2
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: webapp
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: webapp
  policyTypes:
  - Ingress
  - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-database-to-webapp
  namespace: webapp
spec:
  podSelector: {} # Selects all pods in example-namespace2
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: database
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: database
  policyTypes:
  - Ingress
  - Egress
