policies/necessary_webapp_default-connect-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-default-to-webapp
  namespace: webapp
spec:
  podSelector: {} # Selects all pods in example-namespace2
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
  policyTypes:
  - Ingress
  - Egress
